# OneWifi

./: CAC_FEATURES_SUMMARY.md  CAC_FEATURE_SUMMARY.md  CAC_FILES_REFERENCE.md  CODE_REVIEW.md  CONTRIBUTING.md  ChangeLog  Makefile.am  NOTICE  configure.ac  genautotools.ini
source/sampleapps/wifi_motion/: ._wifi_motion.xcodeproj  Makefile.am  datamotion.json
source/sampleapps/wifi_motion/data/: ._index.html  ._jsontree-js-4.7.1  ._main.css  ._motion.js  ._motion.json  ._raw_data  .index.html.swp  .lq.js.swp  .motion.js.swp  associated_clients.json  index.html  main.css
source/sampleapps/wifi_motion/data/jsonTreeViewer-master/: ._README.md
source/sampleapps/wifi_motion/data/jsontree-js-4.7.1/: ._CONTRIBUTING.md  ._PUBLISH.sh  ._test
source/sampleapps/wifi_motion/data/jsontree-js-4.7.1/docs/: ._images
source/sampleapps/wifi_motion/data/jsontree-js-4.7.1/test/: ._jsontree.js.bootstrap.html  ._jsontree.js.no-colors.html  ._jsontree.js.no-paging.html  ._jsontree.js.paging.html  ._jsontree.js.theme.html  ._jsontree.js.translations.html
source/sampleapps/wifi_motion/data/raw_data/: ._csi_samples.json  ._csi_samples_Motion.json  ._csi_samples_Static.json  ._example.json
source/sampleapps/wifi_motion/halinterface/include/: ._wifi_hal.h  ._wifi_hal_ap.h  ._wifi_hal_generic.h  ._wifi_hal_sta.h  wifi_hal_generic.h
source/sampleapps/wifi_motion/src/: ._common_defs.h  ._csimgr.cpp  ._csimgr.h  ._main.cpp  ._sounder.cpp  ._sounder.h  csimgr.cpp  csimgr.h  main.cpp  sounder.cpp  sounder.h
source/sampleapps/wifi_motion/src/math/: ._base.h  ._equation.cpp  ._equation.h  ._matrix.cpp  ._matrix.h  ._mvnpdf.cpp  ._mvnpdf.h  ._npdf.cpp  ._npdf.h  ._number.cpp  ._number.h  ._polynomial.cpp  ._polynomial.h  ._sequence.cpp  ._sequence.h  ._vector.cpp  ._vector.h  base.h  equation.cpp  equation.h  matrix.cpp  matrix.h  number.cpp  number.h  polynomial.cpp  polynomial.h  sequence.cpp  vector.cpp  vector.h
source/sampleapps/wifi_motion/src/utils/: ._base64.c  ._base64.h  ._cJSON.cpp  ._cJSON.h  ._cJSON_Utils.cpp  ._cJSON_Utils.h  ._collection.cpp  ._collection.h  ._utils.cpp  ._utils.h  base64.c  base64.h  collection.h  utils.cpp
source/sampleapps/wifi_motion/src/web/: ._web.cpp  ._web.h  web.cpp  web.h
source/sampleapps/wifi_motion/wifi_motion.xcodeproj/: ._project.xcworkspace  project.pbxproj
source/sampleapps/wifi_motion/wifi_motion.xcodeproj/project.xcworkspace/xcuserdata/smunsh106@cable.comcast.com.xcuserdatad/: UserInterfaceState.xcuserstate
source/sampleapps/wifi_motion/wifi_motion.xcodeproj/xcshareddata/xcschemes/: wifi_motion.xcscheme
source/sampleapps/wifi_motion/wifi_motion.xcodeproj/xcuserdata/smunsh106@cable.comcast.com.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
source/sampleapps/wifi_motion/wifi_motion.xcodeproj/xcuserdata/smunsh106@cable.comcast.com.xcuserdatad/xcschemes/: xcschememanagement.plist
source/test/: Makefile.am  gtest_main.cpp  platform_mocks.c  wifi_api2.c  wifi_ctrl_webconfig_test.cpp
source/test/core/: Makefile.am  wifi_ctrl.c  wifi_ctrl.h  wifi_mgr.c
source/test/db/: wifi_ovsdb.c  wifi_ovsdb.h  wifi_ovsdb_apis.c
(+395 files in other folders)
